infrastructure/configs/the-intersect/openwebui/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: openwebui-httproute
  namespace: openwebui
spec:
  parentRefs:
    - name: internal-gateway-http
      namespace: cilium-ingress
  hostnames: ["${SUB_PAVE_SOLO}.${DOMAIN_COBRA_LANTERN}"]
  rules:
    - backendRefs:
        - name: openwebui-open-webui
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: openwebui-external-httproute
  namespace: openwebui
spec:
  parentRefs:
    - name: external-gateway-https
      namespace: cilium-ingress
  hostnames: ["${SUB_PAVE_SOLO}.${DOMAIN_CORONET_SUMMIT}"]
  rules:
    - backendRefs:
        - name: openwebui-open-webui
          port: 4180
